# proyecto-final-sd-frontend

./: .gitignore  Cargo.toml  Trunk.toml  index.html  tailwind.config.js
src/: lib.rs  main.rs  router.rs
src/components/: home.rs  login.rs  mod.rs
src/components/api/: client.rs  det_sales.rs  mod.rs  product.rs  provider.rs  sales.rs  user.rs
src/components/atoms/: custom_button.rs  custom_input.rs  entities.rs  mod.rs
src/components/molecules/: client_form.rs  client_table.rs  mod.rs  provider_form.rs  sales_form.rs  user_form.rs  user_table.rs
src/components/molecules/forms/: client_form.rs  mod.rs  provider_form.rs  sales_form.rs  user_form.rs
src/components/molecules/tables/: client_table.rs  mod.rs  rows.rs  sales_table.rs  user_table.rs
src/components/organisms/: footer.rs  header.rs  navbar.rs
src/components/pages/: clientes.rs  home.rs  login.rs  mod.rs  productos.rs  proveedores.rs  reportes.rs  usuarios.rs  ventas.rs
styles/: output.css
