[package]
name = "proyecto-final-sd-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
web-sys = "0.3.64"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.38"
reqwasm = "0.5.0"
gloo = "0.10.0"
serde = "1.0.190"
serde_json = "1.0.108"