[package]
name = "proyecto-final-sd-frontend"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
leptos = { version = "0.5.2", features = ["csr", "nightly"] }
leptos_router = { version = "0.5.2", features = ["csr", "nightly"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.38"
gloo = "0.10.0"
serde = "1.0.190"
serde_json = "1.0.108"
console_error_panic_hook = "0.1.7"
reqwest = { version = "0.11.22", features = ["json", "stream"] }
gloo-dialogs = "0.2.0"

[lib]
crate-type = ["cdylib", "rlib"]